Basic player movement fully set up
Fixed and renamed old files to:
- BalingaBase (ACharacter)
- BalingaControllerBase
- BalingaMovementComponentBase

Player can walk, look and jump.

Next:
- Fix Balinga collider being immovable, and add wing colliders
- Start implementing physics
- Make sense of naming conventions and project structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Static/Maps/defaultMap.defaultMap
 EditorStartupMap=/Game/Static/Maps/defaultMap.defaultMap
+GlobalDefaultGameMode=/Game/Static/GameMode/BP_BalingaGameMode.BP_BalingaGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
