changed flight defaults to not be crazy

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Static/Maps/defaultMap.defaultMap
-EditorStartupMap=/Game/Static/Maps/defaultMap.defaultMap
+GameDefaultMap=/Game/Orasot_Bundle/Maps/M_5_Bioms_Showcase.M_5_Bioms_Showcase
+EditorStartupMap=/Game/Orasot_Bundle/Maps/M_5_Bioms_Showcase.M_5_Bioms_Showcase
 GlobalDefaultGameMode=/Game/Static/GameMode/BP_BalingaGameMode.BP_BalingaGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -55,6 +55,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
+r.VirtualTextures=True
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
