better lift and drag values

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Static/Maps/defaultMap.defaultMap
-EditorStartupMap=/Game/Static/Maps/defaultMap.defaultMap
+GameDefaultMap=/Game/Orasot_Bundle/Maps/M_5_Bioms_Showcase.M_5_Bioms_Showcase
+EditorStartupMap=/Game/Orasot_Bundle/Maps/M_5_Bioms_Showcase.M_5_Bioms_Showcase
 GlobalDefaultGameMode=/Game/Static/GameMode/BP_BalingaGameMode.BP_BalingaGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -56,6 +56,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
 r.VirtualTextures=True
+r.Streaming.PoolSize 2000
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
@@ -149,4 +150,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/NavigationSystem.RecastNavMesh]
+bFixedTilePoolSize=False
 
