Smooth desired scaling
Lift and drag scale in magnitude based off of how much they can get the velocity direction to match the desired direction, but there was a problem. They could overshoot this value and that caused us to go back and forth between extreme values (0 multiplier when we overshot,  and 1 multiplier when we're below again). Fixed it by getting the maximum magnitude of lift we could apply before overshooting (projection stuff with desired difference).

Now gonna change how lift is generated in the first place

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -154,3 +154,11 @@ ManualIPAddress=
 [/Script/NavigationSystem.RecastNavMesh]
 bFixedTilePoolSize=False
 
+[/Script/Engine.AnimationSettings]
+DefaultFrameRate=(Numerator=60,Denominator=1)
+
+[/Script/Engine.VirtualTexturePoolConfig]
+DefaultSizeInMegabyte=2000
+bPoolAutoGrowInEditor=True
++Pools=(Formats=(PF_Unknown),MinTileSize=264,MaxTileSize=264,SizeInMegabyte=4000,bEnableResidencyMipMapBias=False,bAllowSizeScale=False,MinScaledSizeInMegabyte=0,MaxScaledSizeInMegabyte=0)
+
