frame-rate independent angular damping

--- a/Project_Balinga.uproject
+++ b/Project_Balinga.uproject
@@ -28,6 +28,10 @@
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
+		},
+		{
+			"Name": "DataCharts",
+			"Enabled": true
 		}
 	]
 }
