Rotation + velocity-forward alignment with drag torque

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -162,3 +162,8 @@ DefaultSizeInMegabyte=2000
 bPoolAutoGrowInEditor=True
 +Pools=(Formats=(PF_Unknown),MinTileSize=264,MaxTileSize=264,SizeInMegabyte=9000,bEnableResidencyMipMapBias=False,bAllowSizeScale=False,MinScaledSizeInMegabyte=0,MaxScaledSizeInMegabyte=0)
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseEulerRotation",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
++PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseRotationVectors",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
++PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseRotationVector",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
