--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -167,3 +167,4 @@ bPoolAutoGrowInEditor=True
 +PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseEulerRotation",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
 +PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseRotationVectors",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
 +PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.bShouldUseRotationVector",NewName="/Script/Project_Balinga.BalingaMovement.bShouldUseVectorRotation")
++PropertyRedirects=(OldName="/Script/Project_Balinga.BalingaMovement.MaxWingDirection",NewName="/Script/Project_Balinga.BalingaMovement.MaxWingAoaOffset")
