multiple wing sections
Feels way less controllable so probably won't implement

--- a/Plugins/ToyDebug/ToyDebug.uplugin
+++ b/Plugins/ToyDebug/ToyDebug.uplugin
@@ -3,7 +3,7 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "ToyDebug",
-	"Description": "Custom debug code for my game.",
+	"Description": "Custom debug code for my projects.",
 	"Category": "",
 	"CreatedBy": "Prankalanka",
 	"CreatedByURL": "",
