--- a/Plugins/ToyMaths/ToyMaths.uplugin
+++ b/Plugins/ToyMaths/ToyMaths.uplugin
@@ -3,7 +3,7 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "ToyMaths",
-	"Description": "Custom maths library for my projects.",
+	"Description": "Custom maths code for my projects.",
 	"Category": "",
 	"CreatedBy": "Prankalanka",
 	"CreatedByURL": "",
